<resources>
    <string name="app_name">Simple Travel Journal</string>

    <string name="babarusi_cristian">(Băbăruși Cristian)</string>
    <string name="demo_version_x_x_xx">demo version x.x.xx</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="travel_list">Travel List</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City break</string>
    <string name="sea_side">Sea side</string>
    <string name="mountains">Mountains</string>
    <string name="your_trip_name_here">your trip name here</string>
    <string name="your_destination_here">your destination here</string>
    <string name="price_euro">Price (euro):</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="rate_the_trip">Rate the trip</string>
    <string name="save">Save</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="select">Select</string>
    <string name="demo_trip_name_title">demo trip name title</string>
    <string name="demo_destination_subtitle">demo destination subtitle</string>
    <string name="title_activity_main_navigation_drawer">MainNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about_us">About Us</string>
    <string name="communicate_options">Communicate Options</string>
    <string name="account">My Account</string>
    <string name="log_out">Log out</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="create_account">Create Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="demo_copyright_version">Demo copyright version</string>
    <string name="version">DNAS Software \u00AE version</string>
    <string name="how_to_use_app">How to use app</string>
    <string name="no_photo_taken">No photo taken</string>
    <string name="no_image_file_selected">No image file selected</string>
    <string name="remove">Remove</string>
    <string name="image_file_selected">Image file selected</string>
    <string name="image_file_removed">Image file removed</string>
    <string name="photo_taken">Photo taken</string>
    <string name="demo_1000">demo 1000</string>
    <string name="set_price"><u>Set price</u></string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="max_value">Max value</string>
    <string name="enter_the_trip_price_euro">Set new trip price</string>
    <string name="wrong_end_date">Wrong END date, please correct it</string>
    <string name="wrong_start_date">Wrong START date, please correct it</string>
    <string name="photo_taken_removed">Photo taken removed</string>
    <string name="required_field">Required field</string>
    <string name="invalid_price">Invalid price</string>
    <string name="out_of_range">Out of range</string>
    <string name="failed_to_load_image">Failed! to load image:</string>
    <string name="value_is_missing">Value is missing</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="demo_rating_x_x">Rating: x.x</string>

</resources>
