<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />

    </group>

    <item android:title="@string/communicate_options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <!--
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
                    -->
            </group>
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@drawable/ic_log_out"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

</menu>
