<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/border_color"
    android:orientation="vertical"
    android:padding="@dimen/space_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fundal_application"
        android:orientation="vertical"
        android:padding="@dimen/space_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/texts_background_color"
            android:gravity="center"
            android:padding="@dimen/space_2"
            android:text="@string/enter_the_trip_price_euro"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_dialog_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_4"
            android:drawableStart="@drawable/ic_euro_symbol"
            android:drawablePadding="@dimen/space_4"
            android:ems="10"
            android:hint="@string/max_value"
            android:inputType="number"
            android:textColor="@drawable/text_color_click"
            android:textSize="@dimen/font_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dialog_cancel"
                android:layout_width="@dimen/space_zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/fundal_button2"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_dialog_set"
                android:layout_width="@dimen/space_zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4"
                android:layout_weight="1"
                android:background="@drawable/fundal_button2"
                android:text="@string/set"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>