<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="6dp"
    app:cardBackgroundColor="#fffcf4"
    app:cardCornerRadius="@dimen/space_8"
    app:cardElevation="@dimen/space_10">

    <!-- for the background of card view -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/fundal_cardview" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background_ripple_effect">

        <ImageView
            android:id="@+id/image_view_travel_list_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/item_background_ripple_effect2"
            android:contentDescription="@null"
            android:padding="2dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_view_trip_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/demo_trip_name_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view_travel_list_picture"
            app:layout_constraintTop_toTopOf="@+id/image_view_travel_list_picture" />

        <TextView
            android:id="@+id/text_view_destination_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/demo_destination_subtitle"
            app:layout_constraintStart_toStartOf="@+id/text_view_trip_name_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_trip_name_title" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#d3e9ee"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_2"
            android:paddingBottom="@dimen/space_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_view_travel_list_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4"
                android:layout_marginEnd="@dimen/space_2"
                android:padding="@dimen/space_8"
                android:text="@string/edit"
                android:textColor="@drawable/text_color_click"
                android:textSize="@dimen/font_13"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_travel_list_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_8"
                android:text="@string/delete"
                android:textColor="@drawable/text_color_click"
                android:textSize="@dimen/font_13"
                android:textStyle="bold" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

